--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -44,3 +44,34 @@ html{
         opacity: 1;
     }
 }
+
+/*  base modal */
+.modal
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+}
+.modal__overlay
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(000, 000, 000, .4);
+}
+.modal__body
+{
+    background-color: var(--white-color);
+    margin: auto;
+    z-index: 2;
+    position: relative;
+    border-radius: 4px;
+}
+.modal__inner
+{
+
+}
