--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,3 +106,135 @@
     margin-left: 11px;
 }
 
+/* notification header */
+
+.header__notify
+{
+    position: absolute;
+    top: 150%;
+    right: 0;
+    width: 404px;
+    background-color: var(--white-color);
+    border: #d3d3d3 solid 1px;
+    cursor: default;
+    transform-origin:calc(100% - 20px) top ;
+    animation: notifyAnimate ease-in .25s;
+    will-change: opacity,tranform;
+    margin-top: 5px;
+    display: none;
+}
+.header__notify-header{
+    height: 40px;
+    background-color: var(--white-color);
+}
+.header__notify-header h3{
+    color: #999;
+    margin: 0 0 0 12px;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 40px;
+    user-select: none;
+}
+.header__notify-list
+{
+    background-color: rgba(238, 75, 43, .07);
+}
+.header__notify-item
+{
+    list-style: none;
+    
+}
+.header__notify-item:hover
+{
+    background-color: #f7f7f7;
+}
+
+
+.header__notify-item--viewed
+{
+    background-color: var(--white-color);
+}
+.header__notify-link
+{
+    display: flex;
+    padding: 12px;
+    text-decoration: none;
+    width: 100%;
+}
+.header__notify-img
+{
+    width: 48px;
+    object-fit: contain;
+}
+.header__notify-info
+{
+    margin-left: 12px;
+}
+.header__notify-name
+{
+    display: block;
+    color: var(--black-color);
+    font-size: 1.4rem;
+    font-weight: bolder;
+}
+.header__notify-discription
+{
+    display: block; 
+    font-size: 1.2rem;
+    color: #8d8383;
+    margin-top: 4px;
+}
+.header__notify-footer
+{
+    text-align: center;
+    padding: 8px 8px;
+    display: flex;
+    margin: auto;
+}
+.header__notify-btn
+
+{
+    width: 100%;
+    text-decoration: none;
+    color: #333;
+    font-weight:bolder;
+}
+
+.header__navbar-notify--hov:hover>.header__notify
+{
+    display: block;
+}
+.header__notify::before
+{
+    content: "";
+    border-style:solid;
+    border-width:  20px 30px;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 0;
+    top: -30px;
+}
+.header__notify::after
+
+{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 90px;
+    height: 20px;
+    right: 0;
+    top: -16px;
+}
+@keyframes notifyAnimate {
+    from
+    {
+        transform: scale(0);
+        opacity: 0;
+
+    }
+    to{ 
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
