--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,3 +238,129 @@
     }
 }
 
+/* authen modal */
+.auth-form{
+    width: 500px;
+    background-color: var(--white-color);
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 5px 4px 16px 0px rgba(0,0,0,0.46);
+
+}
+.auth-form__container
+{
+    padding:32px;
+    
+}
+.auth-form__header
+
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    
+}
+.auth-form__heading
+{
+    font-size: 1.8rem;
+    font-weight: 400;
+    cursor: pointer;
+}
+.auth-form__switch-btn
+{
+    font-size: 1.6rem;
+    color: var(--main-color);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.auth-form__input
+{
+    width: 100%;
+    height: 40px;
+    margin-top: 16px;
+    padding: 0 12px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: #8d8383;
+    border: 1px solid #dbdbdb;
+    border-radius: 2px;
+    outline: none;
+}
+.auth-form__input:focus
+{
+    border-color: #838383;
+}
+.auth-form__aside
+
+{
+    margin-top: 20px;
+    margin-bottom: 80px;
+}
+.auth-form__policy-text{
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    text-align: center;
+    padding: 0 12px;
+}
+.auth-form__policy-link
+{
+    text-decoration: none;
+    color: var(--main-color);
+    font-weight: 400;
+}
+.auth-form__controls{
+    display: flex;
+    justify-content: flex-end;
+}
+.auth-form__controls-back{
+    margin-right: 8px;
+}
+.auth-form__socials{
+    background-color: #f5f5f5;
+    padding: 16px 32px;
+    display: flex;
+    justify-content: space-between;
+}
+.auth-form__socials-icon{
+    font-size: 1.8rem;
+}
+.auth-form__socials--facebook
+{
+    background-color: #3a5a98;
+    color: var(--white-color);
+}
+.auth-form__socials--google
+{
+    color: var(--black-color);
+}
+.auth-form__socials-label{
+    margin: 0 36px;
+}
+/* login */
+
+.auth-form__help{
+    display: flex;
+    justify-content: flex-end;
+   
+}
+.auth-form__help-link{
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: var(--text-color);
+}
+.auth-form__help-forgotten{
+    color: var(--main-color);
+    
+}
+
+.auth-form__help-separate{
+    display: block;
+    height: 22px;
+    border-left: .5px solid #eaeaea;
+    margin: -2px 16px 0;
+    
+}
+
