--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,7 +3,12 @@
     --black-color:#000;
     --text-color:#333;  
     --main-color:#EE4D2D;
-    --header-height:120px
+    --header-height:120px;
+    --navbar-height: 34px;
+    --content-bacground:#f5f5f5;
+    --star-gold:#ffce3e;
+    --border-color:#dbdbdb;
+    --header-with-seatch-heigh: calc(var(--header-height) - var(--navbar-height));
 }
 
 *{
@@ -14,6 +19,18 @@
     user-select: text;
     
 }
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background: var(--white-color);
+}
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(#f12711,#f5af19) ;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
+/* ::-webkit-scrollbar-corner {
+    background: #000;
+} */
 *::selection
 {
     background-color: var(--main-color);
@@ -25,6 +42,9 @@ html{
     line-height: 1.6rem;
     box-sizing: border-box;
 }
+
+
+
 /* layout */
 .grid{
     width: 1200px;
@@ -39,7 +59,26 @@ html{
 .grid__row{
     display: flex;
     flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
 }
+/* test */
+.grid__column-2{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.6667%;
+}
+.grid__column-10{   
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 83.3333%;
+}
+.grid__column-2-4{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
+}
+
 /* animation */
 
 @keyframes fadeIn {
@@ -85,7 +124,7 @@ html{
 
  .btn
  {
-    min-width: 142px;
+    min-width: 90px;
     height: 34px;
     background-color: var(--white-color);
     border: none;
@@ -95,7 +134,7 @@ html{
     border-radius: 2px;
     color: var(--black-color);
     padding: 0 12px;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
  }
@@ -129,4 +168,51 @@ html{
     {
         transform: scale(1.0);
     }
+ }
+
+/* selection */
+ .select-input{
+    height: 34px;
+    padding: 0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    min-width: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+ }
+ /* pagination */
+
+ .pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+ }
+ .pagination-item{
+    list-style: none;
+    margin: 0 12px;
+ }
+ .pagination-item__link{
+    text-decoration: none;
+    font-size: 2rem;
+    color: #939393;
+    min-width: 40px;
+    height: 30px;
+    display: block;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 2px;
+ }
+.pagination-item--active .pagination-item__link{
+    background-color: var(--main-color);
+    color: var(--white-color);
+ }
+ .pagination-item--active .pagination-item__link:hover{
+    filter: brightness(120%);
+ }
+ .pagination-item__icon{
+    font-size: 2rem;
+    color: #939393;
  }
