--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,12 +10,91 @@
 }
 .header__navbar-list{
     list-style: none;
-    margin-top: 4px;
+    margin: 4px 0 0 0;
+    display: flex;
+    align-items: center;
+    z-index: 3;
 }
 
 .header__navbar-item{
     margin: 0 8px;
     position: relative;
+    min-height: 26px;
+}
+.header__navbar-user{
+    display: flex;
+    justify-self: center;
+    position: relative;
+}
+.header__navbar-user-avt{
+    width: 22px;
+    height: 22px;
+    /* color: var(--white-color); */
+    border: 1px solid rgb(0 0 0 / 10%);
+    border-radius: 50%;
+}
+.header__navbar-user-name{
+    margin-left: 8px;
+    font-size: 1.4rem;
+    font-weight: 400;
+
+}
+.header__navbar-user:hover>.header__navbar-user-menu
+{
+    display: block; 
+}
+.header__navbar-user-item a:hover{
+    
+    color: var(--main-color);
+}
+.header__navbar-user-menu{
+    position: absolute;
+    top: calc(100% + 4px);
+    right: 0;
+    background-color: var(--white-color);
+    border-radius: 2px;
+    width: 160px;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
+    display: none;
+    animation: fadeIn ease-in .2s;
+}
+.header__navbar-user-menu::before{
+    content: "";
+    display: block;
+    border-width: 20px 27px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 4px;
+    top: -29px;
+}
+.header__navbar-user-item{
+    padding: 8px 16px;
+    list-style: none;
+}
+.header__navbar-user-item:hover{
+    background-color: #fafafa;
+}
+.header__navbar-user-item a{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    display: inline-block;
+    width: 100%;
+    padding: 4px 0;
+}
+.header__navbar-user-item:first-child{
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+}
+.header__navbar-user-item:last-child{
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+
+}
+.header__navbar-user-item--saparate {
+    border-top: 1px solid rgba(0 0 0 / 5%);
 }
 .header__navbar-item--QR:hover>.header__qr{
     display: block;
@@ -117,7 +196,7 @@
     background-color: var(--white-color);
     border: #d3d3d3 solid 1px;
     cursor: default;
-    transform-origin:calc(100% - 20px) top ;
+    transform-origin:calc(100% - 32px) top ;
     animation: notifyAnimate ease-in .25s;
     will-change: opacity,tranform;
     margin-top: 5px;
@@ -363,4 +442,778 @@
     margin: -2px 16px 0;
     
 }
+/* search */
+.header-with-search{
+    height: var(--header-with-seatch-heigh);
+    margin: 0 8px;
+    display: flex;
+   align-items: center;
+}
 
+.header__logo{
+    width: 200px;
+    cursor: pointer;
+}
+.header__logo-link{
+    text-decoration: none;
+    color: transparent;
+}
+.header__logo-img{
+    width: 150px;
+    height: 50px;
+}
+.header__search{
+    background-color: var(--white-color);
+    height: 40px;
+    flex-grow: 1;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+}
+.header__cart{
+    width: 150px;
+    height: 32px;
+    text-align: center;
+    position: relative;
+   
+}
+.header__cart-icon{
+    font-size: 2.4rem;
+    color: var(--white-color);
+
+}
+.header__cart-notice{
+    font-size: 1.4rem;
+    background-color: var(--white-color);
+    padding: 1px 7px;
+    border-radius: 10px;
+    border:2px solid #EE4D2D;
+    text-align: center;
+    color: var(--main-color);
+    position: absolute;
+    top: -8px;
+    right:45px;
+}
+.header__search-input{
+    width: 100%;
+    height: 100%;
+    outline: none;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    padding: 0 16px;
+    border: none;
+    border-radius: 3px
+}
+.header__search-input:focus> .header__search-history
+{
+    display: block;
+}
+.header__search-input-wrap
+{
+    flex: 1;
+    
+    position: relative;
+}
+.header__search-select{
+    height: 17px;
+    padding: 0 0 0 16px;
+    border-left: 1px solid #ccc;
+    position: relative;
+    cursor: pointer;
+    
+}
+.header__search-select:hover>.header__search-option{
+    display: block;
+}
+.header__search-select-lable,
+.header__search-select-icon{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-select-icon{
+    margin: 0 8px;
+}
+.header__search-btn{
+    width: 60px;
+    height: 34px;
+    padding: 1px 6px;
+    margin: 0 3px 0 0 ;
+    background-color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+}
+.header__search-btn:hover
+{
+    cursor: pointer;
+    background-color: #fb6445;
+}
+.header__search-btn-icon{
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
+.header__search-option{
+    width: 130px;
+    position: absolute;
+    top: 30px;
+    right: 0;
+    box-shadow: 0 1px 2px #e0e0e0;
+    display: none;
+    animation: fadeIn   ease-in .2s;
+    z-index: 1;
+}
+.header__search-option-item{
+    height: 33px;
+    padding: 8px;
+    list-style: none;
+    border-radius: 3px;
+    background-color: var(--white-color);
+}
+.header__search-option-item:hover{
+    background-color: #fafafa;
+}
+.header__search-option-lable{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin: 0 0 0 8px;
+}
+.header__search-option-icon{
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: var(--main-color);
+    margin: 0 8px;
+    display: none;
+}
+.header__search-option::before{
+    content: "";
+    width: 100%;
+    height: 30px;
+    display: block;
+    position: absolute;
+    top: -16px;
+    background-color:transparent;
+}
+.header__search-option-item-active i{
+    display: inline-block;
+}
+/* search history */
+
+.header__search-history{
+    position: absolute;
+    top: calc(100% + 12px);
+    left: 0;
+    width: calc(100% - 16px);
+    background-color: var(--white-color);
+    border-radius: 2px;
+    box-shadow: 0 1px 5px rgb(188, 183, 183);
+    display: none;
+    z-index: 1;
+}
+.header__search-heading{
+    color: #999999;
+    margin: 8px 8px;
+    font-size: 1.4rem;
+    font-weight: lighter;
+}
+.header__search-history-option{
+    list-style: none;
+    
+}
+.header__search-history-item{
+    height: 38px;
+    padding: 0 8px;
+    line-height: 38px;
+}
+.header__search-history-item:hover
+{
+    background-color: #fafafa;
+}
+.header__search-history-item:last-child
+{
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px
+}
+
+.header__search-history-item a{
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #333333;
+    font-weight: bolder;
+    display: block;
+    height: 100%;
+}
+.header__search-input:focus ~ .header__search-history
+{
+    display: block;
+}
+/* cart null */
+.header__cart-list{
+    position: absolute;
+    top: calc(100% + 5px);
+    right: 50px;
+    background-color: var(--white-color);
+    width: 400px;
+    display: block;
+    border-radius: 2px;
+    display: none;
+    cursor: default;
+    animation: fadeIn ease-in .2s;
+    z-index: 1;
+    box-shadow: 0 1px 3.2rem 5px rgba(0, 0, 0, 0.2) ;
+}
+.header__cart-list::after{
+    content: "";
+    position: absolute;
+    right: -2px;
+    top: -32px;
+    border-width: 20px 25px;
+    border-style: solid;
+    cursor: pointer;
+    border-color: transparent transparent var(--white-color) transparent;
+}
+.header__cart-list--null{
+    padding: 24px 0;
+    
+}
+.header__cart-list--null .header__cart-list-null-img,
+.header__cart-list--null .header__cart-list-message{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}   
+.header__cart-list-null-img{
+    width: 50%;
+    display: none;
+}
+.header__cart-list-message{
+    font-size: 1.6rem;
+    font-weight: bolder;
+    display: none;
+    margin-top: 12px;
+}
+.header__cart-wrap{
+    /* position: relative; */
+    display: inline-block;
+    padding: 0 16px;
+    cursor: pointer;
+}
+.header__cart-wrap:hover>.header__cart-list{
+    /* cursor: pointer; */
+    display: block;
+    
+}
+/* list product */
+.header__cart-heading{
+    text-align: left;
+    margin: 8px 0 8px 6px;
+    font-size: 1.4rem;
+    color: #999;
+    font-weight: 400;
+}
+.header__cart-list-item{
+    padding-left:0;
+    max-height: 20vh;
+    list-style: none;
+    overflow-y: scroll ;
+    /* z-index: 2; */
+}
+.header__cart-item{
+    display: flex;
+    align-items: center;
+}
+.header__cart-item:hover{
+    background-color: #f8f8f8;
+    
+}
+.header__cart-item-img{
+    width: 42px;
+    height: 42px;
+    margin: 12px;
+    object-fit: contain;
+    border: 1px solid #c3c3c3;
+}
+.header__cart-item-info{
+    width: 100%;
+    margin: 0 12px;
+}
+.header__cart-item-head{
+    display: flex;
+    /* margin: 0 12px; */
+    justify-content: space-between;
+    align-items: center;
+}
+.header__cart-item-name{
+    font-size: 1.4rem;
+    font-weight: 500;
+    padding: 0 16px 0 0;
+    line-height: 2rem;
+    max-height: 4rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+.header__cart-item-price{
+    color: var(--main-color);
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.header__cart-item-multi{
+    color: #757575;
+    margin: 0 4px;
+}
+.header__cart-item-qnt{
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+.header__cart-item-body{
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    font-size: 1rem;
+    color: var(--text-color);
+    
+    text-align: left;
+}
+
+.header__cart-item-discription{
+   color: #757575;
+   font-size: 1.3rem;
+}
+.header__cart-item-remove{
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.header__cart-item-remove:hover{
+    color: var(--main-color);
+    cursor: pointer;
+}
+.header__cart-view-cart{
+    float: right;
+    margin: 0 12px 12px 0;
+    padding: 0 12px;
+    
+}
+.header__cart-view-cart:hover{
+    background-color: #F05D41;
+}
+/* app container */
+
+.app__container{
+    background-color: var(--content-bacground);
+}
+.app__content{
+    padding-top: 36px;
+}
+.category{
+    border-radius: 2px;
+    background-color: var(--white-color);
+}
+.category-heading{
+    font-size: 1.7rem;
+    color: var(--text-color);
+    font-weight: 400;
+    padding: 12px 16px;
+    border-bottom:1px solid rgb(0 0 0 / 10%);
+}
+.category-heading-icon{
+    font-size: 1.4rem;
+    margin-right: 4px;
+}
+.category-list{
+    padding: 0 0 8px 0;
+    margin-left: 10px;
+}
+.category-item{
+    list-style: none;
+}
+.category-item--avtive .category-item__link{
+    color: var(--main-color);
+}
+.category-item--avtive .category-item__link::before{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 4px; 
+    transform: translateY(-50%);
+    border: 4px solid;
+    border-color: transparent transparent transparent var(--main-color);
+}
+.category-item__link{
+    text-decoration: none;
+    position: relative;
+    right: 0;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    padding: 8px 16px;
+    display: block;
+    transition: right linear .1s;
+}
+.category-item__link:hover{
+    color: var(--main-color);
+    right: -2px;
+}
+/* home filter + sort */
+
+.home-filter{
+    padding: 12px 22px;
+    background-color: rgba(0, 0, 0, 0.04);
+    display: flex;
+    align-items: center;
+    border-radius: 2px;
+    /* justify-content: space-between; */
+}
+.home-filter__page{
+    display: flex;
+    align-items: center;
+}
+.home-filter__title{
+    color: #555555;
+    font-size: 1.4rem;
+    margin-right: 16px;
+}
+.home-filter__btn{
+    margin-right: 12px;
+    background-color: #f0f0f0;
+   font-weight: 400;
+}
+.select-input__label{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+.select-input:hover > .select-input-list{
+    display: block;
+}
+.select-input-list{
+    position: absolute;
+    top:calc(0% + 25px);
+    left: 0;
+    width:100%;
+    background-color: #ffffff;
+    border-radius: 2px;
+    margin: 10px 0;
+    padding: 8px 16px;
+    display: none;
+    z-index: 1;
+    animation: fadeIn ease .2s;
+}
+.select-input-list::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 24px;
+    background-color: transparent;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+.select-input-item{
+    list-style: none;
+    padding: 4px 0;
+
+}
+.select-input-link{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    text-decoration: none;
+    font-weight: 400;
+}
+.select-input-link:hover{
+    color: var(--main-color) ;
+}
+.home-filter__page{
+    margin-left: auto;
+}
+.home-filter__page-num{
+    font-size: 1.5rem;
+    color: var(--text-color);
+    margin: 0 22px 0 0 ;
+    font-weight: 400    ;
+}
+.home-filter__page-current{
+    color: var(--main-color);
+    font-weight: bolder;
+}
+.home-filter__page-btn{
+    background-color: var(--white-color);
+    color: #555555;
+    text-decoration: none;
+    width: 35px;
+    height: 40px;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.home-filter__page-btn:first-child{
+    border-right: 1px solid #eee;
+}
+
+.home-filter__page-btn:last-child:hover{
+    color: var(--main-color);
+}
+
+.home-filter__page-control{
+    border-radius: 2px;
+    overflow: hidden;
+    display: flex;
+    width: 72px;
+    height: 36px;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
+}
+
+.home-filter__page-btn--disabled{
+    background-color: #f9f9f9;
+    cursor: default;
+    color: #999999;
+}
+/* san pham */
+.home-product__item-link{
+    text-decoration: none;
+}
+.home-product-item:hover
+{
+    transform: translateY(-1px);
+    box-shadow: 0 1px 20px 0 rgb(0 0 0 / 5%);
+}
+.home-product{
+    margin-bottom: 10px;
+    
+}
+.home-product-item{
+    background-color: var(--white-color);
+    margin-top: 10px;
+    box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
+    position: relative;
+    
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    transition: transform ease-in-out .1s;
+    will-change: transform;
+}
+.home-product-item__img{
+    padding-top: 100%;
+    background-repeat:no-repeat ;
+    background-size: contain;
+    object-fit: cover;
+}
+.home-product-item__name{
+    font-size: 1.4rem;
+    font-weight: 400;
+    height: 3.6rem;
+    color: var(--text-color);
+    margin: 10px 10px 6px;
+    line-height: 1.8rem;
+    overflow: hidden;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    /* text-overflow: ellipsis;
+    white-space: wrap; */
+}
+
+.home-product-item__price{
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+}
+.home-product-item__price-old{
+    text-decoration: line-through;
+    color: #666;
+    font-size: 1.4rem;
+    margin-left: 10px;
+
+}
+.home-product-item__price-current{
+    font-size: 1.6rem;
+    color: var(--main-color);
+    font-weight: 400;
+    margin: 0 0 0 10px;
+}
+.home-product-item__action{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 10px 0;
+}
+.home-product-item__like-icon{
+   font-size: 1.3rem;
+   
+}
+
+.home-product-item__rate{
+    font-size: 1rem;
+    color: #d5d5d5;
+    margin-top: -1px;
+}
+.home-product-item__rate--gold{
+    color: var(--star-gold);
+}
+
+
+.home-product-item__sold{
+    font-size: 1.2rem;
+    color: #333333;
+    margin-left: 4px;
+}
+.home-product-item__liked .home-product-item__like-icon--fill{
+    display: inline-block;
+}
+.home-product-item__liked .home-product-item__like-icon--empty{
+    display: none;
+}
+.home-product-item__like-icon--fill{
+    display: none;
+    color: var(--main-color);
+}
+.home-product-item__origin{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10px;
+    font-size: 1.2rem;
+    color: #595959;
+    font-weight: 300;
+}
+
+.home-product-item__favourite{
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    color: var(--main-color);
+    font-size: 1.2rem;
+    background-color: currentColor;
+    line-height: 1.6rem;
+    padding-right: 4px;
+    font-weight: 500;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.home-product-item__favourite span{
+    color: var(--white-color);
+}
+.home-product-item__favourite i{
+    color: var(--white-color);
+}
+.home-product-item__favourite-icon{
+    margin-right: 3px;
+    font-size: .9rem;
+    font-weight: bold;
+    
+}
+.home-product-item__favourite::after{
+    content: "";
+    position: absolute;
+    border-top:3px solid currentColor;
+    border-left:3px solid transparent;
+    left: 0;
+    bottom: -3px;
+    filter: brightness(60%);
+}   
+
+.home-product-item__sale-off{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 36px;
+    background-color: rgba(255, 216, 64, 0.94);
+    border-top-right-radius: 2px;
+    text-align: center;
+}
+.home-product-item__sale-off::after{
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    border-width: 0 20px 4px;
+    border-style: solid;
+    color:rgba(255, 216, 64, 0.94); 
+    border-color: transparent currentColor transparent currentColor;
+}
+.home-product-item__sale-off-percent{
+    font-size: 1.2rem;
+    color: #f53e2d;
+    font-weight: bold;
+}
+.home-product-item__sale-off-label{
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    color: var(--white-color);
+    font-weight: 500;
+}
+/* pagination */
+.home-product__pagination
+{
+    margin:48px 0 32px;
+}
+
+/* footer */
+
+.footer{
+    border-top: 4px solid var(--main-color);
+}
+.footer__heading{
+    font-size: 1.4rem;
+    color: #333333;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 14px 0;
+}
+.footer__list-item{
+    list-style: none;
+}
+.footer-item-link{
+    font-size: 1.2rem;
+    color: #737373;
+    text-decoration: none;
+    padding: 2px 0;
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+}
+.footer-item-link:hover{
+    color: var(--main-color);
+}
+.footer-item-link-icon{
+    margin-right: 6px;
+}
+.footer__download{
+    display: flex;
+}
+.footer__download-qr{
+    width: 80px;
+    height: 80px;
+    border: 1px solid var(--border-color);
+}
+.footer__download-apps{
+    flex: 1;
+    display: flex;
+    margin-left: 16px;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer__download-apps-img{
+    height: 16px;
+    object-fit: contain;
+}
+.footer__bottom{
+    padding: 8px 0;
+    margin-top: 36px;
+    background-color: #f5f5f5;
+}
+.footer-text{
+    text-align: center;
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    color: #737373;
+}
+.grid.wide{
+    width: 1200px;
+    margin: 0 auto;
+}
