--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -8,6 +8,7 @@
     --content-bacground:#f5f5f5;
     --star-gold:#ffce3e;
     --border-color:#dbdbdb;
+    --header__sort-bar-height:46px;
     --header-with-seatch-heigh: calc(var(--header-height) - var(--navbar-height));
 }
 
@@ -19,7 +20,7 @@
     user-select: text;
     
 }
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     height: 12px;
     width: 12px;
     background: var(--white-color);
@@ -27,15 +28,15 @@
 ::-webkit-scrollbar-thumb {
     background: linear-gradient(#f12711,#f5af19) ;
     -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-}
+} */
 /* ::-webkit-scrollbar-corner {
     background: #000;
 } */
-*::selection
+/* *::selection
 {
     background-color: var(--main-color);
     color: var(--white-color)
-}
+} */
 html{
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
@@ -46,15 +47,6 @@ html{
 
 
 /* layout */
-.grid{
-    width: 1200px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-.grid__full-width{
-    width: 100%;
-}
 
 .grid__row{
     display: flex;
@@ -66,17 +58,18 @@ html{
 .grid__column-2{
     padding-left: 5px;
     padding-right: 5px;
-    width: 16.6667%;
+    max-width: 16.6667%;
 }
 .grid__column-10{   
     padding-left: 5px;
     padding-right: 5px;
-    width: 83.3333%;
+    max-width: 83.3333%;
 }
 .grid__column-2-4{
+    flex: 0 0 20%;
     padding-left: 5px;
     padding-right: 5px;
-    width: 20%;
+    max-width: 20%;
 }
 
 /* animation */
